--- a/.dockers/ubuntu-16.04/Dockerfile.premade
+++ b/.dockers/ubuntu-16.04/Dockerfile.premade
@@ -2,4 +2,4 @@ FROM eur0c.laas.fr:5000/humanoid-path-planner/hpp-doc/ubuntu:16.04
 
 ENV DEVEL_HPP_DIR /workspace
 
-RUN /auto-install-hpp.sh --branch master --target osg-dae.install
+RUN /auto-install-hpp.sh --branch devel --target osg-dae.install
