--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ variables:
       - $DEVEL_HPP_DIR/test.sh hpp-walkgen                 || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-wholebody-step          || status=1
         #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-rbprm                   || status=1
       - set -e
       - exit $status
     allow_failure: true
