--- a/.dockers/ubuntu-16.04/Dockerfile
+++ b/.dockers/ubuntu-16.04/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get update -qqy && apt-get install -qqy \
     robotpkg-qpoases+doc \
     robotpkg-roboptim-core \
     robotpkg-roboptim-trajectory \
+    robotpkg-romeo-description \
     ros-kinetic-xacro \
     ros-kinetic-kdl-parser \
     ros-kinetic-common-msgs \
