Use branch topic/fcl-release of Pinocchio.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -42,7 +42,7 @@ INSTALL_DOCUMENTATION=ON
 ##################################
 # {{{ Dependencies
 
-pinocchio_branch=v1.3.1
+pinocchio_branch=topic/fcl-release
 pinocchio_repository=${SOT_REPO}
 pinocchio_extra_flags= -DBUILD_PYTHON_INTERFACE=OFF -DBUILD_UNIT_TESTS=OFF
 
