--- a/doc/Makefile
+++ b/doc/Makefile
@@ -88,9 +88,6 @@ hpp-walkgen_repository=${HPP_REPO}
 hpp-wholebody-step_branch=${HPP_VERSION}
 hpp-wholebody-step_repository=${HPP_REPO}
 
-hpp-wholebody-step-corba_branch=${HPP_VERSION}
-hpp-wholebody-step-corba_repository=${HPP_REPO}
-
 hpp-doc_branch=${HPP_VERSION}
 hpp-doc_repository=${HPP_REPO}
 
@@ -105,10 +102,8 @@ hpp-manipulation-corba_repository=${HPP_REPO}
 
 ifeq (${HUMANOID}, TRUE)
   hpp-manipulation_extra_flags=-DHPP_MANIPULATION_HAS_WHOLEBODY_STEP=TRUE
-  hpp-manipulation-corba_extra_flags=-DHPP_MANIPULATION_HAS_WHOLEBODY_STEP=TRUE
 else
   hpp-manipulation_extra_flags=-DHPP_MANIPULATION_HAS_WHOLEBODY_STEP=FALSE
-  hpp-manipulation-corba_extra_flags=-DHPP_MANIPULATION_HAS_WHOLEBODY_STEP=FALSE
 endif
 
 hpp_tutorial_branch=${HPP_VERSION}
@@ -286,11 +281,9 @@ ifeq (${HUMANOID}, TRUE)
 hpp-manipulation.configure.dep: hpp-core.install hpp-constraints.install \
 	hpp-wholebody-step.install hpp-manipulation.checkout
 hpp-manipulation-corba.configure.dep: hpp-manipulation-urdf.install \
-	hpp-wholebody-step-corba.install hpp-manipulation.install \
-	hpp-manipulation-corba.checkout
+	hpp-manipulation.install hpp-manipulation-corba.checkout
 hpp-plot.configure.dep: hpp-corbaserver.install hpp-manipulation-corba.install \
-	hpp-wholebody-step-corba.install qgv.install \
-	hpp-plot.checkout
+	qgv.install hpp-plot.checkout
 else
 hpp-manipulation.configure.dep: hpp-core.install hpp-constraints.install \
 	hpp-manipulation.checkout
@@ -304,9 +297,6 @@ hpp-manipulation-urdf.configure.dep:hpp-manipulation.install \
 	hpp-manipulation-urdf.checkout
 hpp-corbaserver.configure.dep: hpp-core.install \
 	hpp-constraints.install hpp-corbaserver.checkout
-hpp-wholebody-step-corba.configure.dep: hpp-corbaserver.install \
-	hpp-wholebody-step.install hpp-template-corba.install \
-	hpp-wholebody-step-corba.checkout
 hpp-template-corba.configure.dep: hpp-util.install hpp-template-corba.checkout
 qgv.configure.dep: qgv.checkout
 pythonqt.configure.dep: pythonqt.checkout
@@ -317,7 +307,7 @@ hpp-hrp2.configure.dep: hrp2-14-description.install hpp-corbaserver.install \
 	hpp-hrp2.checkout
 hrp2-14-description.configure.dep: robot_capsule_urdf.install \
 	robot_model_py.install hrp2-14-description.checkout
-test-hpp.configure.dep: hpp-wholebody-step-corba.install \
+test-hpp.configure.dep: hpp-wholebody-step.install \
 	hpp-gepetto-viewer.install hpp-hrp2.install test-hpp.checkout
 iai_maps.configure.dep: iai_maps.checkout
 hpp_tutorial.configure.dep: hpp-gepetto-viewer.install iai_maps.install \
