--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ ubuntu-14.04-build:
       - ubuntu-14.04
     <<: *build_definition
 
-devel-build:
+devel-16.04-build:
     image: eur0c.laas.fr:5000/humanoid-path-planner/hpp-doc/devel-premade:16.04
     only:
       -  devel
@@ -113,10 +113,10 @@ ubuntu-14.04-test:
       - ubuntu-14.04
     <<: *test_definition
 
-devel-test:
+devel-16.04-test:
     image: eur0c.laas.fr:5000/humanoid-path-planner/hpp-doc/devel-premade:16.04
     dependencies:
-      - devel-build
+      - devel-16.04-build
     only:
       -  devel
     <<: *test_definition
@@ -146,10 +146,10 @@ ubuntu-14.04-doc:
       - ubuntu-14.04
     <<: *doc_definition
 
-devel-doc:
+devel-16.04-doc:
     image: eur0c.laas.fr:5000/humanoid-path-planner/hpp-doc/devel-premade:16.04
     dependencies:
-      - devel-build
+      - devel-16.04-build
     only:
       -  devel
     <<: *doc_definition
